@@ -1,3 +1,7 @@
+Mon May 26 13:28:57 MDT 2008
+	 Updated and improved documentation.
+	 Releasing GNU libmicrohttpd 0.3.1. -CG
+
 Fri May 23 16:54:41 MDT 2008
 	 Fixed issue with postprocessor not handling URI-encoded
 	 values of more than 1024 bytes correctly. -CG
